--- a/.htaccess
+++ b/.htaccess
@@ -420,6 +420,14 @@ AddDefaultCharset utf-8
 
  <IfModule mod_rewrite.c>
      RewriteEngine On
+     RewriteCond %{HTTPS} !=off
+     RewriteCond %{HTTP_HOST} !^www\. [NC]
+     RewriteCond %{SERVER_ADDR} !=127.0.0.1
+     RewriteCond %{SERVER_ADDR} !=::1
+     RewriteRule ^ https://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+ </IfModule>
+ <IfModule mod_rewrite.c>
+     RewriteEngine On
      RewriteCond %{HTTPS} !=on
      RewriteCond %{HTTP_HOST} !^www\. [NC]
      RewriteCond %{SERVER_ADDR} !=127.0.0.1
